RESOLVED FIXED248763
[macOS] Scrollbar corners fail to render with UI-side compositing
https://bugs.webkit.org/show_bug.cgi?id=248763
Summary [macOS] Scrollbar corners fail to render with UI-side compositing
Aditya Keerthi
Reported 2022-12-05 09:17:31 PST
Attachments
Aditya Keerthi
Comment 1 2022-12-05 09:28:44 PST
EWS
Comment 2 2022-12-06 12:04:04 PST
Committed 257421@main (44477657ccd9): <https://commits.webkit.org/257421@main> Reviewed commits have been landed. Closing PR #7154 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.